Refactored into PieChart class

--- a/index.html
+++ b/index.html
@@ -5,11 +5,115 @@
     <title>RUG-B Income Survey</title>
   </head>
   <body>
+<svg id="pie"></svg>
 <svg id="root"></svg>
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script type="text/javascript">
-var radius = 200;
-var color = d3.scale.category20();
+
+
+
+var svg = d3.select("#root");
+var g = svg.append("g");
+
+
+var PieChart = (function(d3) {
+
+  function defaultValue(d) { return d; };
+
+  var PieChart = function(options) {
+    options = options || {};
+    if (!options.selector) {
+      throw("you must provide a 'selector' in options");
+    }
+    this.radius = options.radius || 100;
+    this.padding = options.padding || 25;
+    this.options = options;
+    // containers
+    var width = this.radius * 2 + this.padding * 2;
+    var height = this.radius * 2 + this.padding * 2;
+    var svg = d3.select(options.selector)
+      .attr("width", width)
+      .attr("height", height);
+    this.g = svg.append("g")
+      .attr("transform", "translate(" + (width / 2) + "," + (height / 2) + ")");
+    // color scale
+    this.color = this.options.color || d3.scale.category20();
+    // default pie layout
+    this.pie = d3.layout.pie()
+      .value(this.options.valueFunction || defaultValue)
+      .sort(this.options.sortFunction || null)
+    // arc generator
+    this.arc = d3.svg.arc()
+      .innerRadius(this.options.innerRadius || 0)
+      .outerRadius(this.radius);
+    // arc generator used for labels
+    this.labelArc = d3.svg.arc()
+      .innerRadius(this.radius)
+      .outerRadius(this.radius * 1.2);
+  };
+
+  PieChart.prototype = {
+    render: function(data) {
+      var g = this.g;
+      var pie = this.pie;
+      var arc = this.arc;
+      var labelArc = this.labelArc;
+      var color = this.color;
+      var radius = this.radius;
+      // add transition to new path
+      g.datum(data).selectAll("path").data(pie).transition().duration(750).attrTween("d", function(a) {
+        var i = d3.interpolate(this._current, a);
+        this._current = i(0);
+        return function(t) {
+          return arc(i(t));
+        };
+      });
+      // add new paths
+      g.datum(data).selectAll("path").data(pie)
+        .enter().append("path")
+          .attr("fill", function(d, i) { return color(i); })
+          .attr("d", arc)
+          .each(function(d) { this._current = d; });
+      // remove unused data
+      g.datum(data).selectAll("path").data(pie)
+        .exit().remove();
+      // labels
+      g.datum(data).selectAll("text").data(pie)
+        .attr("transform", function(d) {
+          return "translate(" + labelArc.centroid(d) + ")";
+        })
+        .attr("text-anchor", function (d, i) {
+          var centroid = labelArc.centroid(d);
+          var midAngle = Math.atan2(centroid[1], centroid[0]);
+          var x = Math.cos(midAngle) * radius * 1.2;
+          return (x > 0) ? "start" : "end";
+        })
+        .text(function(d, i) { return "i: asjflasjflasjf" + i; });
+      // add new labels
+      g.datum(data).selectAll("text").data(pie)
+        .enter().append("text")
+          .attr("text-anchor", function (d, i) {
+            var centroid = labelArc.centroid(d);
+            var midAngle = Math.atan2(centroid[1], centroid[0]);
+            var x = Math.cos(midAngle) * radius * 1.2;
+            return (x > 0) ? "start" : "end";
+          })
+          .style("fill", "black")
+          .style("font", "bold 12px Arial")
+          .attr("transform", function(d) {
+            return "translate(" + labelArc.centroid(d) + ")";
+          })
+          .text(function(d, i) { return "i: asjflasjflasjf" + i; });
+      // remove labels
+      g.datum(data).selectAll("text").data(pie)
+        .exit().remove();
+
+      return this;
+    } // end render
+  };
+
+  return PieChart;
+})(d3);
 
 var data1 = [
   20,
@@ -28,94 +132,9 @@ var data3 = [
   30
 ];
 
-// containers
-var svg = d3.select("#root")
-  .attr("width", radius * 3)
-  .attr("height", radius * 3);
-var g = svg.append("g")
-    .attr("transform", "translate(" + (radius + radius / 2) + "," + (radius + radius / 2) + ")");
+var pie = new PieChart({selector: "#pie"});
+pie.render(data1);
 
-// construct default pie layout
-var pie = d3.layout.pie()
-  .value(function(d) { return d; })
-  .sort(function(a, b) { return a < b; });
-
-// construct arc generator
-var arc = d3.svg.arc()
-  .innerRadius(radius / 2)
-  .outerRadius(radius);
-
-// arc generator used to position labels
-var labelArc = d3.svg.arc()
-  .innerRadius(radius)
-  .outerRadius(radius * 1.2);
-
-function render(data) {
-  // add transition to new path
-  g.datum(data).selectAll("path").data(pie).transition().duration(750).attrTween("d", arcTween);
-  // add new paths
-  g.datum(data).selectAll("path").data(pie)
-    .enter().append("path")
-      .attr("fill", function(d, i) { return color(i); })
-      .attr("d", arc)
-      .each(function(d) { this._current = d; });
-  // remove unused data
-  g.datum(data).selectAll("path").data(pie)
-    .exit().remove();
-
-  // labels
-  g.datum(data).selectAll("text").data(pie)
-    .attr("transform", function(d) {
-      return "translate(" + labelArc.centroid(d) + ")";
-    })
-    .attr("text-anchor", function (d, i) {
-      var centroid = labelArc.centroid(d);
-      var midAngle = Math.atan2(centroid[1], centroid[0]);
-      var x = Math.cos(midAngle) * radius * 1.2;
-      return (x > 0) ? "start" : "end";
-    })
-    .text(function(d, i) { return "i: asjflasjflasjf" + i; });
-  // add new labels
-  g.datum(data).selectAll("text").data(pie)
-    .enter().append("text")
-      .attr("text-anchor", function (d, i) {
-        var centroid = labelArc.centroid(d);
-        var midAngle = Math.atan2(centroid[1], centroid[0]);
-        var x = Math.cos(midAngle) * radius * 1.2;
-        return (x > 0) ? "start" : "end";
-      })
-      .style("fill", "black")
-      .style("font", "bold 12px Arial")
-      .attr("transform", function(d) {
-        return "translate(" + labelArc.centroid(d) + ")";
-      })
-      .text(function(d, i) { return "i: asjflasjflasjf" + i; });
-
-  // remove labels
-  g.datum(data).selectAll("text").data(pie)
-    .exit().remove();
-};
-
-function arcTween(a) {
-  var i = d3.interpolate(this._current, a);
-  this._current = i(0);
-  return function(t) {
-    return arc(i(t));
-  };
-};
-
-render(data1);
-
-// arcs.append("text")
-//   .attr("transform", function(d) {
-//     d.innerRadius = 0;
-//     d.outerRadius = radius;
-//     return "translate(" + arc.centroid(d) + ")";
-//   })
-//   .attr("text-anchor", "middle")
-//   .text(function(d, i) {
-//     return "Arc " + i;
-//   });
 </script>
   </body>
 </html>
